--- a/templates/partials/nota_fiscal/importar_xml.html
+++ b/templates/partials/nota_fiscal/importar_xml.html
@@ -25,7 +25,7 @@
 <!-- Modal de Revisão de Categorias -->
 <div class="modal fade" id="revisaoCategoriasModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-lg">
-    <div class="modal-content">
+    <div class="modal-content modal-selecao-empresa" data-bs-theme="dark">
       <div class="modal-header">
         <h5 class="modal-title">Categorias dos Novos Produtos</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
