--- a/templates/partials/nota_fiscal/importar_xml.html
+++ b/templates/partials/nota_fiscal/importar_xml.html
@@ -8,12 +8,14 @@
         <h2 class="mb-4 text-center">Importar Nota Fiscal (XML)</h2>
         <form id="form-importar-xml" method="post" enctype="multipart/form-data">
           {% csrf_token %}
-          <div class="mb-3">
-            <label for="id_xml" class="form-label">Arquivo XML:</label>
-            <input type="file" name="xml" id="id_xml" class="form-control" accept=".xml" required>
-          </div>
-          <div class="text-end">
-            <button type="submit" class="btn btn-primary">Importar</button>
+          <div class="row mb-3 align-items-end">
+            <div class="col-md-8">
+              <label for="id_xml" class="form-label">Arquivo XML:</label>
+              <input type="file" name="xml" id="id_xml" class="form-control" accept=".xml" required>
+            </div>
+            <div class="col-md-4 text-end">
+              <button type="submit" class="btn btn-primary btn-sm">Importar</button>
+            </div>
           </div>
         </form>
         <div id="preview-nota" class="mt-4"></div>
