--- a/templates/partials/produtos/editar_produto.html
+++ b/templates/partials/produtos/editar_produto.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load widget_tweaks %}
 
 <!-- ✅ Editar Produto - Compatível com AJAX, Bootstrap, tema escuro/claro -->
 <main id="main-content" data-tela="editar_produto" class="container-fluid">
@@ -18,21 +19,96 @@
           <form id="form-editar-produto" method="post" class="ajax-form">
             {% csrf_token %}
 
-            <!-- ✅ Campos do formulário -->
             <div class="row g-3">
-              {% for field in form.visible_fields %}
-                <div class="col-md-{{ field.field.widget.attrs.cols|default:12 }}">
-                  <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                  {{ field }}
-                  {% if field.help_text %}
-                    <div class="form-text">{{ field.help_text }}</div>
-                  {% endif %}
-                  {% for error in field.errors %}
-                    <div class="text-danger small">{{ error }}</div>
-                  {% endfor %}
+              <!-- Identificação -->
+              <div class="col-md-4">{{ form.codigo.label_tag }} {{ form.codigo|add_class:"form-control" }}</div>
+              <div class="col-md-8">{{ form.nome.label_tag }} {{ form.nome|add_class:"form-control" }}</div>
+              <div class="col-12">{{ form.descricao.label_tag }} {{ form.descricao|add_class:"form-control" }}</div>
+
+              <!-- Categoria e Unidade -->
+              <div class="col-md-6">{{ form.categoria.label_tag }} {{ form.categoria|add_class:"form-select" }}</div>
+              <div class="col-md-6">{{ form.unidade_medida_interna.label_tag }} {{ form.unidade_medida_interna|add_class:"form-select" }}</div>
+
+              <!-- Preços -->
+              <div class="col-md-4">{{ form.preco_custo.label_tag }} {{ form.preco_custo|add_class:"form-control" }}</div>
+              <div class="col-md-4">{{ form.preco_venda.label_tag }} {{ form.preco_venda|add_class:"form-control" }}</div>
+              <div class="col-md-4">{{ form.preco_medio.label_tag }} {{ form.preco_medio|add_class:"form-control" }}</div>
+
+              <!-- Estoque -->
+              <div class="col-md-4">{{ form.estoque_total.label_tag }} {{ form.estoque_total|add_class:"form-control" }}</div>
+              <div class="col-md-4">{{ form.quantidade_saidas.label_tag }} {{ form.quantidade_saidas|add_class:"form-control" }}</div>
+              <div class="col-md-4">{{ form.estoque_atual.label_tag }} {{ form.estoque_atual|add_class:"form-control" }}</div>
+
+              <!-- Outros -->
+              <div class="col-md-4">{{ form.controla_estoque.label_tag }} {{ form.controla_estoque }}</div>
+              <div class="col-md-4">{{ form.ativo.label_tag }} {{ form.ativo }}</div>
+              <div class="col-md-4">{{ form.data_cadastro.label_tag }} {{ form.data_cadastro|add_class:"form-control" }}</div>
+              <div class="col-12">{{ form.observacoes.label_tag }} {{ form.observacoes|add_class:"form-control" }}</div>
+            </div>
+
+            <!-- Detalhes Fiscais do Produto -->
+            <fieldset class="mb-4 p-3 border rounded mt-4">
+              <legend class="float-none w-auto px-2">Detalhes Fiscais</legend>
+              {{ formset.management_form }}
+              {% for form_fiscal in formset %}
+                <div class="row g-3">
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.cst_icms.id_for_label }}" class="form-label">CST ICMS</label>
+                    {{ form_fiscal.cst_icms|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.origem_mercadoria.id_for_label }}" class="form-label">Origem Mercadoria</label>
+                    {{ form_fiscal.origem_mercadoria|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-4">
+                    <label for="{{ form_fiscal.aliquota_icms_interna.id_for_label }}" class="form-label">Alíquota ICMS Interna (%)</label>
+                    {{ form_fiscal.aliquota_icms_interna|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-4">
+                    <label for="{{ form_fiscal.aliquota_icms_interestadual.id_for_label }}" class="form-label">Alíquota ICMS Interestadual (%)</label>
+                    {{ form_fiscal.aliquota_icms_interestadual|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-4">
+                    <label for="{{ form_fiscal.reducao_base_icms.id_for_label }}" class="form-label">Redução Base ICMS (%)</label>
+                    {{ form_fiscal.reducao_base_icms|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.cst_ipi.id_for_label }}" class="form-label">CST IPI</label>
+                    {{ form_fiscal.cst_ipi|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.aliquota_ipi.id_for_label }}" class="form-label">Alíquota IPI (%)</label>
+                    {{ form_fiscal.aliquota_ipi|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.cst_pis.id_for_label }}" class="form-label">CST PIS</label>
+                    {{ form_fiscal.cst_pis|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.aliquota_pis.id_for_label }}" class="form-label">Alíquota PIS (%)</label>
+                    {{ form_fiscal.aliquota_pis|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.cst_cofins.id_for_label }}" class="form-label">CST COFINS</label>
+                    {{ form_fiscal.cst_cofins|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.aliquota_cofins.id_for_label }}" class="form-label">Alíquota COFINS (%)</label>
+                    {{ form_fiscal.aliquota_cofins|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.cest.id_for_label }}" class="form-label">CEST</label>
+                    {{ form_fiscal.cest|add_class:"form-control" }}
+                  </div>
+                  <div class="col-md-6">
+                    <label for="{{ form_fiscal.ncm.id_for_label }}" class="form-label">NCM</label>
+                    {{ form_fiscal.ncm|add_class:"form-control" }}
+                  </div>
+                  {{ form_fiscal.id }}
+                  {{ form_fiscal.DELETE }}
                 </div>
               {% endfor %}
-            </div>
+            </fieldset>
 
             <!-- ✅ Ações -->
             <div class="d-flex justify-content-between mt-4">
@@ -51,4 +127,6 @@
     </div>
   </div>
 </main>
+
+
 
