--- a/templates/partials/produtos/lista_produtos.html
+++ b/templates/partials/produtos/lista_produtos.html
@@ -64,7 +64,7 @@
                 <td>{{ produto.codigo }}</td>
                 <td>{{ produto.nome }}</td>
                 <td>{{ produto.categoria.nome }}</td>
-                <td>{{ produto.unidade_medida.sigla }}</td>
+                <td>{{ produto.unidade_medida_interna.sigla }}</td>
                 <td class="text-end">R$ {{ produto.preco_venda|floatformat:2 }}</td>
                 <td class="text-end">{{ produto.estoque_atual|floatformat:2 }}</td>
                 <td>
