--- a/templates/partials/fiscal/natureza_operacao_list.html
+++ b/templates/partials/fiscal/natureza_operacao_list.html
@@ -1,5 +1,9 @@
 {% load static %}
 
+{% block extra_js %}
+<script defer src="{% static 'js/fiscal_list.js' %}"></script>
+{% endblock %}
+
 <div class="container-fluid py-4">
     <div class="card shadow-sm mx-auto" style="max-width: 1200px;">
         <div class="card-body">
